--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -142,90 +142,36 @@
 					<div class="imglogo-wrapper">
 						<img alt="<%=lang.section3.title%>" src="<%= require('../../img/index/scene-log2.png') %>" >
 					</div>
-					<h2 class="title"><%=lang.section3.item1.title%></h2>
-					<p class="intro">At present, many data are owned by all human beings, thereby needing a data infrastructure to
-						enable
-						such shared data access and transaction as medical, education, transportation, energy, agriculture, weather,
-						hydrology,
-						infrastructure, scientific research, public safety data etc. These public data, which are common to all humans,
-						can
-						be distributed, verifiable, stored, analyzed, traded, and used on the Lambda platform.</p>
+					<h2 class="title"><%=lang.section3.item2.title%></h2>
+					<p class="intro"><%=lang.section3.item2.introduce%></p>
 				</div>
 				<div class="scene-item col-lg-w-30 col-lg-offset-w-10 col-md-4 col-sm-6 col-xs-12">
 					<div class="imglogo-wrapper">
 						<img alt="<%=lang.section3.title%>" src="<%= require('../../img/index/scene-log3.png') %>" >
 					</div>
-					<h2 class="title">Access control and protection of personal privacy data</h2>
-					<p class="intro">The advent of the era of big data brings about tremendous challenges to the ownership of personal
-						privacy
-						data. Usually, data collectors have unlimited right to interpret and use data. With the implementation of GDPR
-						and
-						other bills, the contradiction between data privacy among individuals, enterprises and governments is becoming
-						more
-						acute. Lambda provides reliable, secure and privacy-protected data storage and access capability by means of
-						differential
-						privacy, data encryption and signing, identity authentication and access control, and encrypted transmission.</p>
+					<h2 class="title"><%=lang.section3.item3.title%></h2>
+					<p class="intro"><%=lang.section3.item3.introduce%></p>
 				</div>
 				<div class="scene-item col-lg-w-30 col-md-4 col-sm-6 col-xs-12">
 					<div class="imglogo-wrapper">
 						<img alt="<%=lang.section3.title%>" src="<%= require('../../img/index/scene-log4.png') %>" >
 					</div>
-					<h2 class="title">DApp and Blockchain</h2>
-					<p class="intro">So far, many decentralized application projects face the risk of failing to implement, one of the
-						main
-						causes being the shortage of data storage infrastructures. In fact, the essence of an application, centralized or
-						decentralized,
-						is the implementation of business logic, interface display, and user interaction around data access. Therefore,
-						data
-						infrastructure is the core issue of blockchain and decentralized applications. Currently, blockchain ledgers are
-						not
-						suitable for business data storage, IPFS cannot store formatted program access data. While Lambda project
-						provides
-						infinitely scalable decentralized data collection, storage, and access capabilities through elegant chain library
-						decoupling,
-						isomorphic function subchain design, and publicly verifiable data ownership proofs.</p>
+					<h2 class="title"><%=lang.section3.item4.title%></h2>
+					<p class="intro"><%=lang.section3.item4.introduce%></p>
 				</div>
 				<div class="scene-item col-lg-w-30 col-lg-offset-w-10 col-md-4 col-sm-6 col-xs-12">
 					<div class="imglogo-wrapper">
 						<img alt="<%=lang.section3.title%>" class="car" src="<%= require('../../img/index/scene-log5.png') %>" >
 					</div>
-					<h2 class="title">IoT data storage</h2>
-					<p class="intro">The IoT data are massive, time-series, and simple structured, whose generation process can ensure
-						the
-						authenticity of the data. The IoT data occupy a large amount of storage space, and the value of individual data
-						is
-						small. It needs a lasting work and substantial storage and computing resources to extract value from the data.
-						Lambda's
-						digital currency can measure the value of small data, motivating people to share and contribute computing storage
-						resources
-						to obtain token incentives. Lambda provides a system of data collection, data transmission, data storage, data
-						computing
-						and data transaction in the field of IoT. With this system, data collected by sensors such as satellite remote
-						sensing
-						data, hydrological data and atmospheric data can be calculated in different dimensions and sold to anyone and
-						institutions
-						that need it through smart contracts.</p>
+					<h2 class="title"><%=lang.section3.item5.title%></h2>
+					<p class="intro"><%=lang.section3.item5.introduce%></p>
 				</div>
 				<div class="scene-item col-lg-w-30 col-lg-offset-w-10 col-md-4 col-sm-6 col-xs-12">
 					<div class="imglogo-wrapper">
 						<img alt="<%=lang.section3.title%>" src="<%= require('../../img/index/scene-log6.png') %>" >
 					</div>
-					<h2 class="title">Artificial intelligence data</h2>
-					<p class="intro">In the field of artificial intelligence, the current consensus is that the role of data is many
-						times
-						larger than that of the model. However, the acquisition of metadata is a difficult and expensive issue. The
-						shortage
-						of data hinders the development of the artificial intelligence industry. At present, because of lack of trust,
-						data
-						abuse and other reasons, individuals are unwilling to contribute data, and business organizations that have need
-						obtain
-						data through unconventional means. Lambda will eventually form an integrated network of huge data storage space,
-						and
-						data owners can sell their data through smart contracts on Lambda's trading platform. In particular, the value of
-						time-series
-						data lies in the insights after the analysis. Data owners do not need to sell the original data, but only sell
-						the
-						analysis results of the data, and even the insights on the results of the data analysis.</p>
+					<h2 class="title"><%=lang.section3.item6.title%></h2>
+					<p class="intro"><%=lang.section3.item6.introduce%></p>
 				</div>
 			</div>
 		</div>
