--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -292,24 +292,14 @@
 
 	<section id="ecosystem" class="use ecosystem">
 		<div class="container">
-			<h1>ECOSYSTEM</h1>
+			<h1><%=lang.section6.title%></h1>
 			<!-- <span>ECOSYSTEM</span> -->
 			<div class="row">
 				<div class="col-xs-12">
 					<img alt="ECOSYSTEM" src="<%= require('../../img/index/Group2x.png') %>" >
 				</div>
 				<div class="col-md-offset-1 col-md-10 col-sm-12 col-xxs-12">
-					<p style="text-align:center;opacity:0.8">Unlike other blockchains, Lambda is a blockchain data storage
-						infrastructure.
-						The roles of this ecosystem are DAPP developers and project parties, chain node participants, storage node
-						participants
-						and other participants, in which chain node participants include nominees, validators and fishermen. Lambda
-						provides
-						storage, computing, transaction, and other service capabilities. Therefore, roles encompassing resource
-						providers,
-						task creators for submitting data storage and computation tasks, software developers, and data analysts also
-						involve
-						and comprise Lambda's interdependent ecosystem.</p>
+					<p style="text-align:center;opacity:0.8"><%=lang.section6.introduce%></p>
 				</div>
 			</div>
 		</div>
@@ -317,11 +307,11 @@
 
 	<section id="tokensale" class="use tokensale">
 		<div class="container">
-			<h1>TOKEN DISTRIBUTION</h1>
+			<h1><%=lang.section7.title%></h1>
 			<!-- <span>ECOSYSTEM</span> -->
 			<div class="row">
 				<div class="col-xs-12">
-					<img alt="TOKEN DISTRIBUTION" src="<%= require('../../img/index/tokensale3.jpg') %>" >
+					<img alt="<%=lang.section7.title%>" src="<%= require('../../img/index/tokensale3.jpg') %>" >
 				</div>
 				<!-- <div class="col-md-offset-1 col-md-10 col-sm-12 col-xxs-12">
 					<p style="text-align:center;opacity:0.8">SSS.</p>
@@ -332,7 +322,7 @@
 
 	<section id="roadmap" class="use roadmap">
 		<div class="container">
-			<h1>ROADMAP</h1>
+			<h1><%=lang.section8.title%></h1>
 			<div class="row" style="position:relative">
 				<div class="col-md-offset-1 col-md-11 box-wrapper">
 					<div class="row">
@@ -348,13 +338,11 @@
 						<div class="p-l-0 col-sm-10 col-xxs-10">
 							<div class="year-list">
 								<span class="num">2017 Q4</span>
-								<h2 class="title">Lambda technology demonstration and research</h2>
+								<h2 class="title"><%=lang.section8.item1.title%></h2>
 								<ul>
-									<li>In-depth study the technology architecture of public chains and basic protocol, and the core team read a
-										lot
-										of codes and papers</li>
-									<li>Demonstrate the calculation and storage model of massive data in the Permissionless environment</li>
-									<li>Demonstrate the connection between OAS business model and Token economy</li>
+									<li><%=lang.section8.item1.introduce1%></li>
+									<li><%=lang.section8.item1.introduce2%></li>
+									<li><%=lang.section8.item1.introduce3%></li>
 								</ul>
 							</div>
 						</div>
@@ -371,16 +359,14 @@
 						<div class="p-l-0 col-sm-10 col-xxs-10">
 							<div class="year-list">
 								<span class="num">2018 Q1</span>
-								<h2 class="title">Lambda technology demonstration and research</h2>
+								<h2 class="title"><%=lang.section8.item2.title%></h2>
 								<ul>
-									<li>Choose an appropriate blockchain consensus mechanism, determine to adopt the high-speed chain design of
-										the
-										Sharding program, and the HoneyBadgerBFT consensus algorithm of the subchain</li>
-									<li>Determine to adopt multi-sub-chain design that Request and Reponse record separately</li>
-									<li>Perfect the separated structural design of the chain storehouses</li>
-									<li>Determine to adopt the data ownership proofs of PDP and access control and encryption mechanisms of ABE</li>
-									<li>Determine the technological route and technological program</li>
-									<li>Complete the technological white paper</li>
+									<li><%=lang.section8.item2.introduce1%></li>
+									<li><%=lang.section8.item2.introduce2%></li>
+									<li><%=lang.section8.item2.introduce3%></li>
+									<li><%=lang.section8.item2.introduce4%></li>
+									<li><%=lang.section8.item2.introduce5%></li>
+									<li><%=lang.section8.item2.introduce6%></li>
 								</ul>
 							</div>
 						</div>
@@ -397,14 +383,14 @@
 						<div class="p-l-0 col-sm-10 col-xxs-10">
 							<div class="year-list">
 								<span class="num">2018 Q3</span>
-								<h2 class="title">Lambda core component development</h2>
+								<h2 class="title"><%=lang.section8.item3.title%></h2>
 								<ul>
-									<li>Evaluate and test the performance of libp2p and devp2p, and modify the code .</li>
-									<li>Implement the underlying data block storage system.</li>
-									<li>Technology validation of Lambda FS by closed-source development of Lambda Chain</li>
-									<li>Community development and real-time open source of Lambda FS </li>
-									<li>Implement Lambda database based on Lambda FS</li>
-									<li>Develop Lambda Agent based on hot language to facilitate integration with existing application</li>
+									<li><%=lang.section8.item3.introduce1%></li>
+									<li><%=lang.section8.item3.introduce2%></li>
+									<li><%=lang.section8.item3.introduce3%></li>
+									<li><%=lang.section8.item3.introduce4%></li>
+									<li><%=lang.section8.item3.introduce5%></li>
+									<li><%=lang.section8.item3.introduce6%></li>
 								</ul>
 							</div>
 						</div>
@@ -421,12 +407,12 @@
 						<div class="p-l-0 col-sm-10 col-xxs-10">
 							<div class="year-list">
 								<span class="num">2018 Q4</span>
-								<h2 class="title">Lambda Chain test network development</h2>
+								<h2 class="title"><%=lang.section8.item4.title%></h2>
 								<ul>
-									<li>P2P network development is used to synchronize blockchain ledgers and storage data.</li>
-									<li>Virtual machine development and development and validation of built-in contracts</li>
-									<li>API interface, RPC interface, command line and peripheral tools development</li>
-									<li>Open source Lambda Chain</li>
+									<li><%=lang.section8.item4.introduce1%></li>
+									<li><%=lang.section8.item4.introduce2%></li>
+									<li><%=lang.section8.item4.introduce3%></li>
+									<li><%=lang.section8.item4.introduce4%></li>
 								</ul>
 							</div>
 						</div>
@@ -443,12 +429,11 @@
 						<div class="p-l-0 col-sm-10 col-xxs-10">
 							<div class="year-list">
 								<span class="num">2019 Q1</span>
-								<h2 class="title">Test network construction and development based on Lambda paradigms</h2>
+								<h2 class="title"><%=lang.section8.item5.title%></h2>
 								<ul>
-									<li>Build a large-scale test network based on community and conduct comprehensive testing</li>
-									<li>Issue LDA to encourage early community enthusiasts to develop Lambda-based application paradigms</li>
-									<li>Test and correct the security and business vulnerabilities of the application paradigms based on the test
-										network</li>
+									<li><%=lang.section8.item5.introduce1%></li>
+									<li><%=lang.section8.item5.introduce2%></li>
+									<li><%=lang.section8.item5.introduce3%></li>
 								</ul>
 							</div>
 						</div>
@@ -465,13 +450,11 @@
 						<div class="p-l-0 col-sm-10 col-xxs-10">
 							<div class="year-list">
 								<span class="num">2019 Q2</span>
-								<h2 class="title">Expansion of other data service capabilities and data transactions</h2>
+								<h2 class="title"><%=lang.section8.item6.title%></h2>
 								<ul>
-									<li>Launched by the Foundation to encourage more data storage and database service capabilities to access the
-										Lambda
-										ecosystem
+									<li><%=lang.section8.item6.introduce1%>
 									</li>
-									<li>Explore data transactions business scenarios and patterns within the Lambda ecosystem</li>
+									<li><%=lang.section8.item6.introduce2%></li>
 								</ul>
 							</div>
 						</div>
@@ -577,7 +560,7 @@
 				<!-- <span>ADVISOR</span> -->
 			</h1>
 			<div class="row team-wrapper team-wrapper2">
-				<div class="col-md-2 col-xxs-4  ">
+				<div class="col-md-3 col-xxs-4  ">
 					<div class="head">
 						<div class="head-wrapper">
 							<img src="<%= require('../../img/index/tj.png') %>" alt="Tian Jia">
@@ -585,7 +568,7 @@
 						<p class="name">Tian Jia</p>
 					</div>
 				</div>
-				<div class="col-md-2 col-xxs-4 col-xxs-offset-0  col-md-offset-half col-lg-offset-half">
+				<div class="col-md-3 col-xxs-4 ">
 					<div class="head">
 						<div class="head-wrapper">
 							<img src="<%= require('../../img/index/szy.png') %>" alt="Sun Zhongying">
@@ -593,7 +576,7 @@
 						<p class="name">Sun Zhongying</p>
 					</div>
 				</div>
-				<div class="col-md-2 col-xxs-4 col-xxs-offset-0  col-md-offset-half col-lg-offset-half">
+				<div class="col-md-3 col-xxs-4 ">
 					<div class="head">
 						<div class="head-wrapper">
 							<img src="<%= require('../../img/index/lch.png') %>" alt="Liu Chunhua">
@@ -602,7 +585,7 @@
 					</div>
 				</div>
 				
-				<div class="col-md-2 col-xxs-4 col-xxs-offset-0  col-md-offset-half col-lg-offset-half">
+				<div class="col-md-3 col-xxs-4">
 					<div class="head">
 						<div class="head-wrapper">
 							<img src="<%= require('../../img/index/Lucien Chen.png') %>" alt="Lucien Chen">
@@ -611,7 +594,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-2 col-xxs-4 col-xxs-offset-0  col-md-offset-half col-lg-offset-half">
+				<div class="col-md-3 col-xxs-4">
 					<div class="head">
 						<div class="head-wrapper">
 							<img src="<%= require('../../img/index/wt.png') %>" alt="Wang Tao">
@@ -619,7 +602,7 @@
 						<p class="name">Wang Tao</p>
 					</div>
 				</div>
-				<div class="col-md-2 col-xxs-4 col-xxs-offset-0  col-md-offset-half col-lg-offset-half">
+				<div class="col-md-3 col-xxs-4">
 					<div class="head">
 						<div class="head-wrapper">
 							<img src="<%= require('../../img/index/cy.png') %>" alt="Cheng Yuan">
@@ -627,7 +610,7 @@
 						<p class="name">Cheng Yuan</p>
 					</div>
 				</div>
-				<div class="col-md-2 col-xxs-4  ">
+				<div class="col-md-3 col-xxs-4  ">
 					<div class="head">
 						<div class="head-wrapper">
 							<img src="<%= require('../../img/index/BM.png') %>" alt="BMAN Lee">
