添加英语，俄语两种语言

--- a/src/view/partial/footer.ejs
+++ b/src/view/partial/footer.ejs
@@ -6,25 +6,15 @@
 			</div>
 			<div class="info">
 				<div class="about">
-					<% if(pageId == 'indexEn'){ %>
 						<ul>
-							<li class="mao"><a  href="#scene" >Application Scenarios</a></li>
-							<li class="mao"><a  href="#principle" >Working Principle</a></li>
-							<li class="mao"><a  href="#ecosystem" >Ecosystems</a></li>
-							<li class="mao"><a  href="#tokensale" >Token Distribution</a></li>
-							<li class="mao"><a  href="#roadmap" >RoadMap</a></li>
-							<li class="mao"><a  href="https://blog.lambda.im/" >Blog</a></li>
-							<li class="mao"><a  href="mailto:info@lambda.im" >Contact Us</a></li>
+							<li class="mao"><a  href="#scene" ><%=lang.foot.menu1%></a></li>
+							<li class="mao"><a  href="#principle" ><%=lang.foot.menu2%></a></li>
+							<li class="mao"><a  href="#ecosystem" ><%=lang.foot.menu3%></a></li>
+							<li class="mao"><a  href="#tokensale" ><%=lang.foot.menu4%></a></li>
+							<li class="mao"><a  href="#roadmap" ><%=lang.foot.menu5%></a></li>
+							<li class="mao"><a  href="https://blog.lambda.im/" ><%=lang.foot.menu6%></a></li>
+							<li class="mao"><a  href="mailto:info@lambda.im" ><%=lang.foot.menu7%></a></li>
 						</ul>
-					<% } else {%>
-						<ul>
-							<li class="mao"><a  href="#scene" >使用场景</a></li>
-							<li class="mao"><a  href="#principle" >工作原理</a></li>
-							<li class="mao"><a  href="#ecosystem" >生态系统</a></li>
-							<li class="mao"><a  href="#roadmap" >路线图</a></li>
-							<li class="mao"><a  href="https://blog.lambda.im/" >博客</a></li>
-						</ul>
-					<% } %>
 				</div>
 				<div class="contact">
 					<!-- <h3 class="title">联系我们</h3> -->
