--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -7,60 +7,37 @@
 					</a>
 				</div>
 				<div class="navbar nav-right">
-					<% if(pageId === 'index') {%>
-					<div class="nav-item mao">
-						<a href="#scene" >
-							使用场景
-						</a>
-					</div>
-	        <div class="nav-item mao" >
-	          <a href="#principle">
-	            工作原理
-	          </a>
-	        </div>
-					<div class="nav-item mao" >
-						<a href="#ecosystem">
-							生态系统
-						</a>
-					</div>
-					<div class="nav-item mao" >
-						<a href="#roadmap" >
-							路线图
-						</a>
-					</div>
-					<% } else if(pageId === 'indexEn'){ %>
 						<div class="nav-item mao">
-							<a href="#scene" >
+							<a href="#scene">
 								<%=lang.head.menu1%>
 							</a>
 						</div>
 						<div class="nav-item mao" >
 							<a href="#principle">
-								WORKING PRINCIPLE
+								<%=lang.head.menu2%>
 							</a>
 						</div>
 						<div class="nav-item mao" >
 							<a href="#ecosystem">
-								ECOSYSTEM
+								<%=lang.head.menu3%>
 							</a>
 						</div>
 						<div class="nav-item mao" >
 							<a href="#tokensale" >
-								TOKEN DISTRIBUTION
+								<%=lang.head.menu4%>
 							</a>
 						</div>
 						<div class="nav-item mao" >
 							<a href="#roadmap" >
-								ROADMAP
+								<%=lang.head.menu5%>
 							</a>
 						</div>
 
 						<div class="nav-item mao" >
 							<a id="tokenregister" href="https://token.lambda.im/#/register" >
-								REGISTER/SIGN UP
+								<%=lang.head.menu6%>
 							</a>
 						</div>
-					<% } %>
 					<div class="nav-item" style="float:right">
 
 					</div>
@@ -73,23 +50,14 @@
 				<div class="mobile-navbar">
 					<div class="nav-item active" id="products" style="border-top: 1px solid rgba(255,255,255,.2)">
 						<ul>
-							<% if(pageId === 'index') {%>
-							<li class="mao"><a href="javascript:;">使用场景</a></li>
-							<li class="mao"><a href="javascript:;">工作原理</a></li>
-							<li class="mao"><a href="javascript:;">生态系统</a></li>
-							<li class="mao"><a href="javascript:;">路线图</a></li>
-							<% } else if(pageId === 'indexEn'){ %>
-								<li class="mao"><a href="javascript:;">APPLICATION SCENARIOS</a></li>
-								<li class="mao"><a href="javascript:;">WORKING PRINCIPLE</a></li>
-								<li class="mao"><a href="javascript:;">ECOSYSTEM</a></li>
-								<li class="mao"><a href="javascript:;">TOKEN DISTRIBUTION</a></li>
-								<li class="mao"><a href="javascript:;">ROADMAP</a></li>
-								<li class="mao"><a href="https://token.lambda.im/#/register">REGISTER/SIGN UP</a></li>
-							<% } %>
+								<li class="mao"><a href="javascript:;"><%=lang.head.menu1%></a></li>
+								<li class="mao"><a href="javascript:;"><%=lang.head.menu2%></a></li>
+								<li class="mao"><a href="javascript:;"><%=lang.head.menu3%></a></li>
+								<li class="mao"><a href="javascript:;"><%=lang.head.menu4%></a></li>
+								<li class="mao"><a href="javascript:;"><%=lang.head.menu5%></a></li>
+								<li class="mao"><a href="https://token.lambda.im/#/register"><%=lang.head.menu6%></a></li>
 						</ul>
 					</div>
-
-
 					<div class="nav-item" id="language">
 						<ul>
 
