修正俄语版本

--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -652,8 +652,7 @@
 
 	<section id="team" class="use team">
 		<div class="container">
-			<h1>CORE TEAM</h1>
-			<!-- <span>CORE TEAM</span> -->
+			<h1><%=lang.section9.title1%></h1>
 			<div class="row team-wrapper">
 				<div class="col-md-3 col-xxs-4">
 					<div class="head">
@@ -742,9 +741,7 @@
 					</div>
 				</div>
 			</div>
-			<h1>ADVISOR
-				<!-- <span>ADVISOR</span> -->
-			</h1>
+			<h1><%=lang.section9.title2%></h1>
 			<div class="row team-wrapper team-wrapper2">
 				<div class="col-md-3 col-xxs-4  ">
 					<div class="head">
@@ -810,8 +807,7 @@
 
 	<section id="partners" class="use partners">
 		<div class="container">
-			<h1>Investor</h1>
-			<!-- <span>PARTNERS</span> -->
+			<h1><%=lang.section10.title%></h1>
 			<div class="row partners-wrapper">
 				<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
 					<div class="partners-logo partners-logoyfy">
