--- a/src/css/page/index.less
+++ b/src/css/page/index.less
@@ -544,11 +544,13 @@ section.partners {
   .scene-item {
     min-height: 650px;
   }
+  .container{
+    width: 1200px;
+  }
 }
 @media (max-width: 1441px) {
   section.banner-contents {
     padding-top: 80px;
-    // padding-bottom: 10px;
   }
   .logo {
     img {
