--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -958,9 +958,9 @@
 		</div>
 	</section>
 
-	<div class="star-field">
+	<!-- <div class="star-field">
 		<div class="layer"></div>
 		<div class="layer"></div>
 		<div class="layer"></div>
-	</div>
+	</div> -->
 </div>
