--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -1,69 +1,81 @@
 <header>
 	<div class="nav">
-			<div class="container">
-				<div class="logo">
-					<a href="/index.html">
-						<img alt="lambda" src="<%= require('../../img/logowhite.svg') %>" alt="">
+		<div class="container">
+			<div class="logo">
+				<a href="/index.html">
+					<img alt="lambda" src="<%= require('../../img/logowhite.svg') %>" alt="">
+				</a>
+			</div>
+			<div class="navbar nav-right">
+				<div class="nav-item mao">
+					<a href="#scene">
+						<%=lang.head.menu1%>
 					</a>
 				</div>
-				<div class="navbar nav-right">
-						<div class="nav-item mao">
-							<a href="#scene">
-								<%=lang.head.menu1%>
-							</a>
-						</div>
-						<div class="nav-item mao" >
-							<a href="#principle">
-								<%=lang.head.menu2%>
-							</a>
-						</div>
-						<div class="nav-item mao" >
-							<a href="#ecosystem">
-								<%=lang.head.menu3%>
-							</a>
-						</div>
-						<div class="nav-item mao" >
-							<a href="#tokensale" >
-								<%=lang.head.menu4%>
-							</a>
-						</div>
-						<div class="nav-item mao" >
-							<a href="#roadmap" >
-								<%=lang.head.menu5%>
-							</a>
-						</div>
-
-						<div class="nav-item mao" >
-							<a id="tokenregister" href="https://token.lambda.im/#/register" >
-								<%=lang.head.menu6%>
-							</a>
-						</div>
-					<div class="nav-item" style="float:right">
-
-					</div>
+				<div class="nav-item mao">
+					<a href="#principle">
+						<%=lang.head.menu2%>
+					</a>
 				</div>
-				<div class="navbar-toggle-btn">
-					<span class="bar"></span>
-					<span class="bar"></span>
-					<span class="bar"></span>
+				<div class="nav-item mao">
+					<a href="#ecosystem">
+						<%=lang.head.menu3%>
+					</a>
 				</div>
-				<div class="mobile-navbar">
-					<div class="nav-item active" id="products" style="border-top: 1px solid rgba(255,255,255,.2)">
-						<ul>
-								<li class="mao"><a href="javascript:;"><%=lang.head.menu1%></a></li>
-								<li class="mao"><a href="javascript:;"><%=lang.head.menu2%></a></li>
-								<li class="mao"><a href="javascript:;"><%=lang.head.menu3%></a></li>
-								<li class="mao"><a href="javascript:;"><%=lang.head.menu4%></a></li>
-								<li class="mao"><a href="javascript:;"><%=lang.head.menu5%></a></li>
-								<li class="mao"><a href="https://token.lambda.im/#/register"><%=lang.head.menu6%></a></li>
-						</ul>
-					</div>
-					<div class="nav-item" id="language">
-						<ul>
+				<div class="nav-item mao">
+					<a href="#tokensale">
+						<%=lang.head.menu4%>
+					</a>
+				</div>
+				<div class="nav-item mao">
+					<a href="#roadmap">
+						<%=lang.head.menu5%>
+					</a>
+				</div>
 
-						</ul>
-					</div>
+				<div class="nav-item mao">
+					<a id="tokenregister" href="https://token.lambda.im/#/register">
+						<%=lang.head.menu6%>
+					</a>
+				</div>
+				<div class="nav-item" style="float:right">
+
+				</div>
+			</div>
+			<div class="navbar-toggle-btn">
+				<span class="bar"></span>
+				<span class="bar"></span>
+				<span class="bar"></span>
+			</div>
+			<div class="mobile-navbar">
+				<div class="nav-item active" id="products" style="border-top: 1px solid rgba(255,255,255,.2)">
+					<ul>
+						<li class="mao">
+							<a href="javascript:;"><%=lang.head.menu1%></a>
+						</li>
+						<li class="mao">
+							<a href="javascript:;"><%=lang.head.menu2%></a>
+						</li>
+						<li class="mao">
+							<a href="javascript:;"><%=lang.head.menu3%></a>
+						</li>
+						<li class="mao">
+							<a href="javascript:;"><%=lang.head.menu4%></a>
+						</li>
+						<li class="mao">
+							<a href="javascript:;"><%=lang.head.menu5%></a>
+						</li>
+						<li class="mao">
+							<a href="https://token.lambda.im/#/register"><%=lang.head.menu6%></a>
+						</li>
+					</ul>
+				</div>
+				<div class="nav-item" id="language">
+					<ul>
+
+					</ul>
 				</div>
 			</div>
 		</div>
+	</div>
 </header>
