多语言版本

--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -72,7 +72,12 @@
 				</div>
 				<div class="nav-item" id="language">
 					<ul>
-
+							<li class="mao">
+									<a href="https://www.lambda.im/en">English</a>
+							</li>
+							<li class="mao">
+									<a href="https://www.lambda.im/ru">Russia</a>
+							</li>
 					</ul>
 				</div>
 			</div>
