--- a/src/css/common/header.less
+++ b/src/css/common/header.less
@@ -49,7 +49,14 @@ header{
 					a{
 						opacity: 1;
 					}
-  			}
+				}
+				
+				.lang{
+					display: none;
+				}
+				.language:hover{
+					display: block;
+				}
   		}
   	}
     .nav-right{
