--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -38,8 +38,13 @@
 						<%=lang.head.menu6%>
 					</a>
 				</div>
-				<div class="nav-item" style="float:right">
 
+				<div class="nav-item">
+					<a class="language">lang</a>
+					<ul class="lang">
+						<li>English</li>
+						<li>Russia</li>
+					</ul>
 				</div>
 			</div>
 			<div class="navbar-toggle-btn">
